# online-cinema-api

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DOCKER.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker-buid.yml
app/: main.py
app/api/: deps.py
app/api/v1/: accounts.py  cart.py  movies.py  orders.py  payments.py  router.py
app/core/: __init__.py  celery_app.py  config.py  emails.py  enums.py  exceptions.py  logging.py  security.py
app/core/security/: __init__.py  jwt.py  passwords.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_init_accounts.py  0002_activation_tokens.py  0003_refresh_tokens.py  0004_reset_tokens.py  0005_movies_schema.py  0006_cart_schema.py  0008_payments_schema.py  0009_movie_association_models.py
app/db/models/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payments.py
app/db/repositories/: __init__.py  cart.py  movies.py
app/repositories/: __init__.py  accounts.py  base.py  cart.py  movies.py  orders.py  payments.py
app/schemas/: accounts.py  cart.py  movies.py  payments.py
app/services/: accounts.py  cart.py  movies.py  orders.py  payments.py
app/tasks/: cleaup_tokens.py
app/tests/: conftest.py  test_accounts_flow.py  test_admin_and_edge_cases.py  test_cart_orders_payments_flow.py  test_docs_protection.py  test_movies_public.py  utils.py
app/workers/: __init__.py  beat.py  celery_app.py
app/workers/tasks/: accounts.py
deploy/: README_DEPLOY.md  docker-compose.prod.yml
docker/: entrypoint.sh
scripts/: init_db.py
